# ChangeLog for x11-libs/qt-gui
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-gui/ChangeLog,v 1.44 2009/04/09 15:25:44 armin76 Exp $

  09 Apr 2009; Raúl Porcel <armin76@gentoo.org> qt-gui-4.4.2-r3.ebuild:
  ia64/sparc stable wrt #263945

  05 Apr 2009; Tobias Klausmann <klausman@gentoo.org>
  qt-gui-4.4.2-r3.ebuild:
  Stable on alpha, bug #263945

  05 Apr 2009; Markus Meier <maekke@gentoo.org> qt-gui-4.4.2-r3.ebuild:
  amd64/x86 stable, bug #263945

  18 Mar 2009; Markos Chandras <hwoarang@gentoo.org> qt-gui-4.4.2-r3:
  Adding inputmethods target on qt-gui-4.4.2-r3 as well ( bug #262917 )

  18 Mar 2009; Markos Chandras <hwoarang@gentoo.org>
  -qt-gui-4.5.0_rc1-r1.ebuild:
  Dropping 4.5.0_rc1

  18 Mar 2009; Markos Chandras <hwoarang@gentoo.org> qt-gui-4.5.0:
  Add inputmethods on targets. Fixes bug #262917

  17 Mar 2009; Raúl Porcel <armin76@gentoo.org> qt-gui-4.5.0.ebuild:
  Add ~arm wrt #262462

  15 Mar 2009; Markos Chandras <hwoarang@gentoo.org> qt-gui-4.5.0:
  Proper installation of accessibility widget ( fixes bug #262600 )

  14 Mar 2009; Markos Chandras <hwoarang@gentoo.org> qt-gui-4.5.0:
  Couple of fixes on raster use flag warning message

*qt-gui-4.5.0 (04 Mar 2009)

  04 Mar 2009; Ben de Groot <yngwin@gentoo.org> +qt-gui-4.5.0.ebuild:
  Version bump

  18 Feb 2009; Jeroen Roovers <jer@gentoo.org> qt-gui-4.4.2-r1.ebuild:
  Stable for HPPA (bug #248083).

  15 Feb 2009; Markos Chandras <hwoarang@gentoo.org>
  -qt-gui-4.5.0_rc1.ebuild, qt-gui-4.5.0_rc1-r1.ebuild:
  Added gtk+:2 dependency. Fixes bug #259119

*qt-gui-4.4.2-r3 (14 Feb 2009)

  14 Feb 2009; Markos Chandras <hwoarang@gentoo.org>
  +files/0195-compositing-properties.diff,
  +files/0203-qtexthtmlparser-link-color.diff,
  +files/0224-fast-qpixmap-fill.diff,
  +files/0225-invalidate-tabbar-geometry-on-refresh.patch,
  +files/0226-qtreeview-column_resize_when_needed.diff,
  +files/0238-fix-qt-qttabbar-size.diff,