@@ -31,7 +31,8 @@ DIST qt-x11-opensource-src-4.4.2.tar.bz2 102816706 RMD160 5719ab5800ca181417e0df
 DIST qt-x11-opensource-src-4.5.0.tar.bz2 113335010 RMD160 5714f2772ce358e6528ec13121aebc8e63e848cf SHA1 db136bbed1715c155ceb610309d33f943c1df8fd SHA256 e1b356a54e65781ed94f19d785356a88daa8d38b9dbbca35439b80ca8c4a5be9
 EBUILD qt-gui-4.4.2-r1.ebuild 5815 RMD160 6cc78a1f0d861e92ca1a2d10ae7ef575c480bcbd SHA1 21b53c42fe4f00eb5bd855fba107c34e0558d74d SHA256 c74032ecdedeb6a2928c72f7f7ee81e9593e468550695d7b75f4a8af8f89e104
 EBUILD qt-gui-4.4.2-r2.ebuild 6094 RMD160 6b0203bb52e09e197e34540232f7e01a0afe8d84 SHA1 988fa97b971da58ffa2df274fff4488d57de9cae SHA256 32d4dce358df593384c38b88286c19eb650d49a91b13eda5f69d1a1e34619a4c
-EBUILD qt-gui-4.4.2-r3.ebuild 6958 RMD160 e77687a719704ee77f0f0e9a99bedb4cb5e079f5 SHA1 3fcd793b9dc6fed8ce96baa756b51d058cfdb98b SHA256 9dfbe4ef1158c129058fda5d632b18505bbf32cf7b172665883d4c495eb2ecbf
+EBUILD qt-gui-4.4.2-r3.ebuild 6957 RMD160 2d04c10677b30bee2e8bc7dc6c82425c1c505129 SHA1 37ae67c336572cdd1f197429a83df338c31257a3 SHA256 dee5530990ff1cdf75035a73d74d8a854dfbbc18d8d1c9e1c455af2cd6d4c957
+EBUILD qt-gui-4.5.0-r1.ebuild 6726 RMD160 6323497f5e88bf0e8afd139cd251c3e962828116 SHA1 a15bb2b01a925b008820a728b77d5c7511c76392 SHA256 48313a1087e165560d8aa6a74d41f98c882d1bfd0927bebabb6e3b54aaa316a9
 EBUILD qt-gui-4.5.0.ebuild 6121 RMD160 33f90ae65e7645c6df619515a389e2962f822c39 SHA1 4c3ad3520ca53ebe421c9cf509c6c651598d944c SHA256 d3148d25a74385e378618b28a44d0422928beaeaedc5b7488b37ce8063724acb
-MISC ChangeLog 6772 RMD160 3ce6acb6f251f108df1665acb2846d254ac17733 SHA1 fa37eb3e35dc16b39bf37df8ea0ef2df6356ad45 SHA256 9d2571bc7ea92d22426e308ccf52ee5d5b1bec00b89a389a9b3d3f522bf92d7b
+MISC ChangeLog 7030 RMD160 c00c2fea66f8720f00b54f87e087475d93f66872 SHA1 00c510f58ed8f95a034016fe1b798a2955f6933f SHA256 5a51cb28d662b89ddb8eb2540e355aadc932153b4e808d1636b804d94da42ac1
 MISC metadata.xml 636 RMD160 d7e251319271eb08ec8a81f159b788399b72209b SHA1 ee1479223764214d8d9811dc5bc8bf7a1d95cfd7 SHA256 00175a33be6633a0cee53ef22c8db1f3d3e3c3bfddfcbef6cb95ff89065064b3
